traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:12: error: Missing closing brace `}' assumed here
      dir = 1; setPos(getX(),getY()+1); cpt += 1; ecritMessage(cpt);
      ^TraversalZigZag:13: error: ';' expected but 'else' found.
    } else if (getX() == 0) {
      ^TraversalZigZag:16: error: Missing closing brace `}' assumed here
} 
^